# libgit

./: .npmignore  Cargo.toml  index.d.ts  index.js  package.json  tests.js
.cargo/: config.toml
.github/workflows/: CI.yml
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: commit.rs  config.rs  credentials.rs  fetch_options.rs  index.rs  lib.rs  object.rs  reference.rs  remote.rs  repository.rs  revwalk.rs  test.rs  tree.rs
src/task/: mod.rs
src/task/remote/: connect.rs  mod.rs  pull.rs  push.rs
src/task/repository/: clone.rs  create_commit.rs  fetch.rs  get_branch_commit.rs  init.rs  mod.rs  open.rs  status.rs
test/: RepositoryTest.js
